--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class="container py-4">
+    <div class="container py-4 px-0">
+      <%= flash_message(flash[:success], :sucess) if flash[:success] %>
+      <%= flash_message(flash[:error], :danger) if flash[:error] %>
+      <%= flash_message(flash[:alert], :warning) if flash[:alart] %>
+      <%= flash_message(flash[:notice], :info) if flash[:notice] %>
       <%= yield %>
     </div>
   </body>
