--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,11 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
+    <%= f.label :nickname %><br />
+    <%= f.text_field :nickname, autofocus: true, class: "form-control col-md-5 col-sm", placeholder: "Enter nickname"%>
+  </div>
+
+  <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class: "form-control col-md-5 col-sm", placeholder: "Enter email"%>
   </div>
