プロフィール画像のアップロード機能を実装

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,16 @@
 <nav class="navbar bg-dark navbar-dark">
   <a href="/" class="navbar-brand"><%= ApplicationHelper::APP_MAME %></a>
   <% if user_signed_in? %>
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <%= link_to 'プロフィール編集', edit_user_registration_path, class: 'nav-link text-secondary' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link text-secondary' %>
+    <ul class="navbar-nav">
+      <li class="navbar-item dropdown">
+        <%= link_to '#', id: "navbarDropDownMenuLink", class: "nav-link dropdown-toggle", "data-toggle": "dropdown", "data-flip": "true", "aria-haspopup": "false", "aria-expanded": "false" do %>
+          <%= image_tag current_user.avatar.url, class: "rounded-circle", style: 'width: 50px;' %>
+        <% end  %>
+
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink" style="position: absolute;right: 0;left: auto;">
+          <%= link_to 'プロフィール編集', edit_user_registration_path, class: 'dropdown-item' %>
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+        </div>
       </li>
     </ul>
   <% else %>
@@ -14,6 +18,5 @@
       <li class="nav-item">
         <%= link_to 'ログイン', new_user_session_path, class: 'nav-link text-secondary' %>
       </li>
-
   <% end %>
 </nav>
