--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Hello, world</h1>
+<div class="col-md-3">
+  <% if user_signed_in? %>
+    <div class="card p-2">
+      <%= image_tag current_user.avatar.url, class: "card-img-top rounded-circle" %>
+      <div class="card-body">
+        <h4 class="card-title"><%= @user.nickname %></h4>
+        <p class="card-text">
+          <span class="text-secondary">ここにユーザ情報が入ります。</span>
+        </p>
+      </div>
+    </div>
+  <% end %>
+</div>
