--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,13 +1,22 @@
-<div class="col-md-3">
+<div class="row">
   <% if user_signed_in? %>
-    <div class="card p-2">
-      <%= image_tag current_user.avatar.url, class: "card-img-top rounded-circle" %>
-      <div class="card-body">
-        <h4 class="card-title"><%= @user.nickname %></h4>
-        <p class="card-text">
-          <span class="text-secondary">ここにユーザ情報が入ります。</span>
-        </p>
-      </div>
+    <div class="col-md-3 col-12 d-none d-md-block">
+        <div class="card p-2">
+          <%= image_tag current_user.avatar.url, class: "card-img-top rounded-circle" %>
+          <div class="card-body">
+            <h4 class="card-title"><%= @user.nickname %></h4>
+            <p class="card-text">
+              <span class="text-secondary">ここにユーザ情報が入ります。</span>
+            </p>
+          </div>
+        </div>
+    </div>
+    <div class="col-md-9 col-12">
+      <%= render partial: 'book', collection: @books %>
+    </div>
+  <% else %>
+    <div class="col-12">
+      <%= render partial: 'book', collection: @books %>
     </div>
   <% end %>
 </div>
